force-app/main/default/objects/Work_Order_Ledger__c/Work_Order_Ledger__c.object-meta.xml
<CustomObject>
    <description>Accounting reconciliation ledger. One record per Work Order.</description>
    <label>Work Order Ledger</label>
    <nameField>
        <displayFormat>WOL-{00000}</displayFormat>
        <label>Work Order Ledger Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Ledgers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>