force-app/main/default/objects/Work_Order_Ledger__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Order Ledgers</relationshipLabel>
    <relationshipName>Work_Order_Ledger_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>