force-app/main/default/objects/Work_Order_Ledger__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <formula>TRIM(Work_Order__r.Account.Owner.FirstName &amp; " " &amp; Work_Order__r.Account.Owner.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>