force-app/main/default/objects/Work_Order_Ledger__c/fields/Attention_Reason__c.field-meta.xml
<CustomField>
    <fullName>Attention_Reason__c</fullName>
    <label>Attention Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>