force-app/main/default/objects/Work_Order_Ledger__c/fields/Attention_Required__c.field-meta.xml
<CustomField>
    <fullName>Attention_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attention Required</label>
    <type>Checkbox</type>
</CustomField>