force-app/main/default/objects/Work_Order_Ledger__c/fields/Last_Material_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Material_Activity__c</fullName>
    <label>Last Material Activity</label>
    <type>DateTime</type>
</CustomField>