force-app/main/default/objects/Work_Order_Ledger__c/fields/Opportunity_Count__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Count__c</fullName>
    <label>Opportunity Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>