force-app/main/default/objects/Work_Order_Ledger__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Work Order Ledgers (Opportunity Owner)</relationshipLabel>
    <relationshipName>Work_Order_Ledgers_Opportunity_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>