force-app/main/default/objects/Work_Order_Ledger__c/fields/Reconciliation_Status__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Status__c</fullName>
    <label>Reconciliation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Open</fullName>
            <default>true</default>
            <label>Open</label>
        </value>
        <value>
            <fullName>Needs Review</fullName>
        </value>
        <value>
            <fullName>Ready for Billing Review</fullName>
        </value>
        <value>
            <fullName>On Hold</fullName>
        </value>
        <value>
            <fullName>Reconciled</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>