force-app/main/default/objects/Work_Order_Ledger__c/fields/Service_Appointment_Count__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Count__c</fullName>
    <label>Service Appointment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>