force-app/main/default/objects/Work_Order_Ledger__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Work Order Ledgers</relationshipLabel>
    <relationshipName>Work_Order_Ledgers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>