force-app/main/default/objects/Work_Order_Ledger__c/fields/Work_Order_Key__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Key__c</fullName>
    <label>Work Order Key</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>