force-app/main/default/objects/Work_Order_Ledger__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Work_Order__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Reconciliation_Status__c</columns>
    <columns>Last_Service_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Work Order Ledgers</label>
</ListView>